--- a/exo5.html
+++ b/exo5.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
-<html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Exercice 5</title>
-  </head>
-  <body>
-<table cellspacing="2px" cellpadding="2px;" rules="all" style="border:solid 1px black;">
-  <caption>Mon compte BNP</caption>
-<thead>
-  <tr style= "strong">
-       <th>Date</th>
-       <th>Libellé</th>
-       <th>Débit</th>
-       <th>Crédit</th>
-</thead>
-<tbody>
-  <tr>
-    <td>1/05/2016</td>
-    <td>paye</td>
-    <td>1500</td>
-    <td>0</td>
-  <tr>
-    <td>1/05/2016</td>
-    <td>course de la semaine</td>
-    <td>0</td>
-    <td>152,30</td>
-  <tr>
-    <td>4/05/2016</td>
-    <td>McDO</td>
-    <td>0</td>
-    <td>32,40</td>
-  <tr>
-    <td>5/05/2016</td>
-    <td>Loyer</td>
-    <td>0</td>
-    <td>700</td>
-  <tr>
-    <td>5/05/2016</td>
-    <td>Internet</td>
-    <td>0</td>
-    <td>139,90</td>
-  <tr>
-    <td style= "text-align: center"; colspan= "2">solde</td>
-    <td style= "text-align: center"; colspan= "2">575,40</td>
-</table>
-</body>
-</html>
+<html lang="fr" >
+<head>
+  <style>
+  table, th ,td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+</style>
+<meta charset="utf-8" />
+<title>Exercice 5</title>
+</head>
+<body>
+  <table>
+    <caption>Mon compte BNP</caption>
+    <thead>
+      <tr style= "strong">
+        <th>Date</th>
+        <th>Libellé</th>
+        <th>Débit</th>
+        <th>Crédit</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1/05/2016</td>
+          <td>paye</td>
+          <td>1500</td>
+          <td>0</td>
+          <tr>
+            <td>1/05/2016</td>
+            <td>course de la semaine</td>
+            <td>0</td>
+            <td>152,30</td>
+            <tr>
+              <td>4/05/2016</td>
+              <td>McDO</td>
+              <td>0</td>
+              <td>32,40</td>
+              <tr>
+                <td>5/05/2016</td>
+                <td>Loyer</td>
+                <td>0</td>
+                <td>700</td>
+                <tr>
+                  <td>5/05/2016</td>
+                  <td>Internet</td>
+                  <td>0</td>
+                  <td>139,90</td>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="2" align="center">Solde</td>
+                    <td colspan="2" align="center">575.40</td>
+                  </tfoot>
+                </table>
+              </body>
+              </html>
