--- a/exo6.html
+++ b/exo6.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr" dir="ltr">
+<html lang="fr" dir="ltr" />
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Exercice 6</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id= "element1"></div>
