Réalisation CV numérique

--- a/cv.html
+++ b/cv.html
@@ -3,30 +3,120 @@
 <head>
   <meta charset="utf-8"  />
   <title>CV Frédéric FAUQUEMBERT</title>
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styleCv.css" />
 </head>
-<header>
-  <h1>FREDERIC FAUQUEMBERT</h1>
-  <h2>Développeur Web</h2>
-  <div id= "img"><img src="fred.png" alt="Photo" title="Frédéric" /></div>
-</header>
-<figure>
-
-</figure>
 <body>
+<header>
+  <p><strong>FREDERIC FAUQUEMBERT</strong></p>
+  <p><strong>Développeur Web</strong></p>
+  <img src="fred.png" alt="Photo" title="Fauquembert" />
+</header>
   <nav>
     <div class="menu">
-    <ul>
-      <li class="menuPres"><a href="#element1">Présentation</a></li>
-      <li class="menuExp"><a href="#element2">Expériences</a></li>
-      <li class="menuComp"><a href="#element3">Compétences</a></li>
-      <li class="menuForm"><a href="#element4">Formations</a></li>
-      <li class="menuCont"><a href="#element5">Contacts</a></li>
-    </ul>
+      <ul>
+        <li class="menuPres"><a href="#section0">Présentation</a></li>
+        <li class="menuExp"><a href="#section1">Expériences</a></li>
+        <li class="menuComp"><a href="#section2">Compétences</a></li>
+        <li class="menuForm"><a href="#section3">Formations</a></li>
+        <li class="menuCont"><a href="#section4">Contacts</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div id="page">
+    <div id="section0">
+      <h2>Présentation</h2>
+      <div id="pres">
+        <p><em>Nom:</em>  Frédéric FAUQUEMBERT</p>
+        <p><em>Date de naissance:</em>  20 avril 1969</p>
+        <p><em>Adresse:</em>  32, rue du Bout du Monde</p>
+        <p><em>Ville:</em>  60190 FRANCIERES</p>
+        <p>Célibataire</p>
+        <p>Sans enfants</p>
+
+      </div>
+      <div class="sectionD">
+        <p>Expérimenté depuis 20 ans dans le domaine du commercial, j'ai développé une région quasi vierge pour une société pour atteindre le peloton de tête en 5 ans, puis j'ai évolué vers un poste d'encadrement commercial où j'ai managé jusqu'à 22 VRP exclusifs sur le grand nord ouest français. </p>
+      </div>
+    </div>
+    <div id="section1">
+      <h2>Expériences</h2>
+      <div class="sectionG">
+        <div id="expG">
+        <p><span class="time">2003-2015</span></p>
+        <p><span class="time">1995-2003</span></p>
+        <p><span class="time">1992-1994</span></p>
+        <p><span class="time">1991-1992</span></p>
+        </div>
+      </div>
+      <div class="sectionD">
+        <p><strong>CHEF DES VENTES B to B</strong></p>
+        <p>COOPERE SA distributeur produits et matériels professionnels pour coiffeurs.</p>
+        <p>- Animation d’une équipe de 22 représentants</p><br />
+        <p><strong>REPRESENTANT exclusif VRP (Départements 60-80-02)</strong></p>
+        <p>COOPERE SA distributeur produits et matériels professionnels pour coiffeurs.</p>
+        <p>- Accroissement du C.A. SUBLIMO du dernier rang en 1995 au second en 2002</p><br />
+        <p><strong>AGENT DE PROMOTION en Marketting</strong></p>
+        <p>- DIRECT MARKETTING FRANCE S.A</p><br />
+        <p><strong>TECHNICO COMMERCIAL en alternance</strong></p>
+        <p>- Ets LABOULET S.A (Semences agricoles)</p>
+      </div>
+    </div>
+    <div id="section2">
+      <h2>Compétences</h2>
+      <div class="sectionG">
+
+      </div>
+      <div class="sectionD">
+        <p><strong>DEVELOPPEMENT WEB</strong></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p><strong>MANAGERIALES</strong></p>
+        <p>- Recrutements, formations et accompagnements de commerciaux</p>
+        <p>- Définition et suivi des objectifs secteurs, reporting</p>
+        <p>- Définition et mise en place de la politique commerciale et marketing</p>
+        <p>- Organisation de réunions et/ou visioconférences de management, lancements et</p>
+        <p>  animations commerciales</p>
+        <p>- Techniquez de vente éthique gagnant–gagnant</p>
+        <p><strong>COMMERCIALES</strong></p>
+        <p>- Gestion et développement d’une clientèle</p>
+        <p>- Prospection de nouveaux clients</p>
+        <p>- Implantation d'une marque exclusive</p>
+        <p>- Animations, ventes et merchandising en GMS</p>
+      </div>
+    </div>
+    <div id="section3">
+      <h2>Formations</h2>
+      <div class="sectionG">
+        <p>2018</p>
+        <p>1992</p>
+        <p>1990</p>
+        <p>1988</p>
+      </div>
+      <div class="sectionD">
+        <p>Titre Professionnel Developpeur Logiciel Niveau III E2N NOVEI Formation Noyon</p>
+        <p>DTA Technico-commercial, Ecole de vente de Picardie (IFV CCI d’Amiens)</p>
+        <p>DUT Biologie Appliquée IUT d’Amiens</p>
+        <p>Bac D scientifique</p>
+      </div>
+    </div>
+    <div id="section4">
+      <h2>Contacts</h2>
+      <div class="sectionG">
+        <p><em>Tél:</em>  06.61.78.54.24</p>
+        <p><em>Courriel:</em>  frederic.fauquembert@sfr.fr</p>
+        <a href="linkedin">Linkedin</a>
+        <a href="facebook">Facebook</a>
+        <p></p>
+      </div>
+      <div class="sectionD">
+        <p></p>
+      </div>
+    </div>
   </div>
-</nav>
+  <footer>
+    <div id="footer">Copyright Frédéric FAUQUEMBERT - Toute reproduction interdite</div>
+  </footer>
 </body>
-<footer>
-  <p>Copyright Frédéric FAUQUEMBERT - Toute reproduction interdite</p>
-</footer>
-</html>
+  </html>
